--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         top: 0px;
         left: 0px;
         width: 100vw;
-        height: 100vw;
+        height: 100vh;
         z-index: -1;
         background-image: linear-gradient(-45deg, rgb(140, 50, 255), rgb(255, 70, 240));
         margin-top: 70px;
