--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         z-index: -1;
         background-image: linear-gradient(-45deg, rgb(140, 50, 255), rgb(255, 70, 240));
         margin-top: 70px;
+        animation: changeColor infinite 20s;
+      }
+      @keyframes changeColor {
+        0%{filter: hue-rotate(20deg);}
+        50%{filter: hue-rotate(-30deg);}
+        100%{filter: hue-rotate(20deg);}
       }
       .header {
         width: 100vw;
