--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Maybi Games</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
+    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
     <style>
       body {
         margin: 0px;
