--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         width: 49vw;
         margin-left: 1vw;
         margin-right: -2vw;
+        background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
       }
       h1 {
         display: none;
