--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Maybi Games</title>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
     <style>
       body {
@@ -38,7 +38,7 @@
       }
       .siteTitle {
         font-size: 60px;
-        font-family: Quicksand;
+        font-family: Open Sans;
         color: white;
         padding: 0px 0px 0px 10%;
         margin: 0px;
@@ -60,7 +60,7 @@
         line-height: 60px;
         color: white;
         font-size: 20px;
-        font-family: Quicksand;
+        font-family: Open Sans;
         text-decoration: none;
         display: inline-block;
         white-space: nowrap;
