--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         width: 49vw;
         margin-left: 1vw;
         margin-right: -2vw;
-        background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2));
+        background-color: rgba(0, 0, 0, 0.4);
       }
       h1 {
         display: none;
@@ -90,6 +90,10 @@
         document.getElementById("siteTitle").style.fontSize = "35px";
         document.getElementById("siteTitle").style.paddingLeft = "5%";
       }
+    }
+    function hideDiscaimer() {
+      document.getElementById("notice").style.transform = "translateY(100%)";
+      document.getElementById("notice").style.left = "0px";
     }
     </script>
   </head>
@@ -176,5 +180,6 @@
       <a href="Maybi_WorldsHardestGame.html">Worlds's Hardest Game</a>
       <a href="Maybi_WorldsHardestGame2.html">Worlds's Hardest Game 2</a>
     </div>
+    <div class="notice" id="notice" style="transition: 0.3s;font-size: 18px; font-family: Open Sans; white-space: nowrap; text-align: center; color: white; position: fixed; bottom: 0px; left: 50%; width: 100vw; transform: translateX(-50%); background-color: #1e1f26; padding: 5px; cursor: pointer;" onclick="hideDiscaimer()">This site Maybi inactive from June 8 - September 10. Go Outside!</div>
   </body>
 </html>
