--- a/index.html
+++ b/index.html
@@ -184,5 +184,6 @@
       <a href="Maybi_WorldsHardestGame2.html">Worlds's Hardest Game 2</a>
     </div>
     <div class="notice" id="notice" style="transition: 0.3s;font-size: 18px; font-family: Open Sans; white-space: nowrap; text-align: center; color: white; position: fixed; bottom: 0px; left: 50%; width: 100vw; transform: translateX(-50%); background-color: #1e1f26; padding: 5px; cursor: pointer;" onclick="hideDiscaimer()">This site Maybi inactive from June 8 - September 10. Go Outside!</div>
+    <div style="font-size: 18px; font-family: Open Sans; white-space: nowrap; color: #1e1f26; position: absolute; top: -20px; right: 0px; padding: 0px;">Sabi was here</div>
   </body>
 </html>
