--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
       <a href="Maybi_EarnToDie2012.html">Earn To Die 2012</a>
       <a href="Maybi_EarnToDie2012Part2.html">Earn To Die 2012 Part 2</a>
       <a href="Maybi_ElectricMan.html">Electric Man</a>
+      <a href="Maybi_EpicCombo.html">Epic Combo</a>
       <a href="Maybi_FancyPants.html">Fancy Pants</a>
       <a href="Maybi_FancyPants2.html">Fancy Pants 2</a>
       <a href="Maybi_CrystalTemple.html">FB & WG Crystal Temple</a>
