--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
     <div class="gameLinks" id="gameLinks">
       <a href="Maybi_2048.html">2048</a>
       <a href="Maybi_Achilles.html">Achilles</a>
+      <a href="Maybi_AgeOfDefense.html">Age of Defense</a>
       <a href="Maybi_AgeOfDefense3.html">Age of Defense 3</a>
+      <a href="Maybi_AgeOfDefense4.html">Age of Defense 4</a>
       <a href="Maybi_AgeOfWar.html">Age of War</a>
       <a href="Maybi_AgeOfWar2.html">Age of War 2</a>
       <a href="Maybi_BattlePanic.html">Battle Panic</a>
