--- a/SR.html
+++ b/SR.html
@@ -100,6 +100,7 @@
         opacity: 0;
         transition: 0.4s;
         cursor: default;
+        overflow: scroll;
       }
       @media only screen and (max-width: 825px){
         .rant{
